# yxd-auth

./: LICENSE-ISC
crates/core/: Cargo.toml  LICENSE
crates/core/src/: base64key.rs  error.rs  lib.rs  otimer.rs  packet_stream.rs  pdus.rs  signedobj.rs  ticket.rs  val64.rs
crates/kdc/: Cargo.toml
crates/kdc/src/: db_.rs  lib.rs  main.rs
crates/server-executor/: Cargo.toml
crates/server-executor/src/: lib.rs
docs/: derivauth_spec.txt
