[package]
name = "yxd-auth-core"
description = "YXD auth core library"
version = "0.0.0"
authors = ["Erik Zscheile <zseri.devel@ytrizja.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
bitflags = "1.2"
futures = "0.3"
serde_cbor = "0.11"
zeroize = "1.1"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["alloc", "clock", "serde", "std"]

[dependencies.futures_codec]
version = "0.4"
features = ["cbor"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.yz-encsess]
git = "https://github.com/YZITE/encsess2.git"
branch = "master"

[dependencies.yz-glue-dhchoice]
git = "https://github.com/YZITE/encsess2.git"
branch = "master"
features = ["serde"]
