[package]
name = "yxd-auth-core"
description = "YXD auth core library"
version = "0.0.0"
authors = ["Erik Zscheile <zseri.devel@ytrizja.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
async-channel = "1.5"
async-executor = "1.3"
base64 = "0.13"
bitflags = "1.2"
easy-parallel = "3.1"
futures-lite = "1.11"
num_cpus = "1.13"
ring = "0.16"
serde_bytes = "0.11"
serde_cbor = "0.11"
thiserror = "1.0"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["alloc", "clock", "serde", "std"]

[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["io", "sink"]

[dependencies.futures_codec]
git = "https://github.com/zserik/futures-codec.git"
branch = "impl-stderror"
version = "0.4"
features = ["cbor"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.yz-glue-dhchoice]
git = "https://github.com/YZITE/encsess2.git"
branch = "master"
features = ["serde"]

[dependencies.zeroize]
version = "1.1"
features = ["zeroize_derive"]
