[package]
name = "yxd-auth-kdc"
description = "YXD auth key distribution center (T3P)"
version = "0.0.0"
authors = ["Erik Zscheile <zseri.devel@ytrizja.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
yxd-auth-core = { path = "../core" }
serde = "1.0"
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2.4"
zeroize = "1.1"

[dependencies.yz-encsess]
git = "https://github.com/YZITE/encsess2.git"
branch = "master"
