[package]
name = "yxd-auth-kdc"
description = "YXD auth key distribution center (T3P)"
version = "0.0.0"
authors = ["Erik Zscheile <zseri.devel@ytrizja.de>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
async-channel = "1.5"
async-lock = "2.3"
async-net = "1.5"
async-oneshot = "0.4"
anyhow = "1.0"
ctrlc = "3.1"
event-listener = "2.5"
futures-lite = "1.11"
futures-util = "0.3"
rusqlite = "0.24"
serde = "1.0"
thiserror = "1.0"
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2.4"
yxd-auth-core = { path = "../core" }
yxd-server-executor = { path = "../server-executor" }
zeroize = "1.1"

[dependencies.yz-encsess]
git = "https://github.com/YZITE/encsess2.git"
branch = "master"
